translate submission date

--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -923,6 +923,9 @@ msgstr "Initiiert"
 msgid "Submitted"
 msgstr "Gemeldet"
 
+msgid "submitted"
+msgstr "angemeldet"
+
 msgid "Withdrawn"
 msgstr "Zurückgezogen"
 
