--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -914,6 +914,9 @@ msgstr "Avviato"
 msgid "Submitted"
 msgstr "Inviato"
 
+msgid "submitted"
+msgstr "inviato"
+
 msgid "Withdrawn"
 msgstr "Ritirato"
 
