Add test for setting

--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -48,7 +48,7 @@ msgstr "Chat ID"
 msgid "Images"
 msgstr "Images"
 
-msgid "Choose the position of the page images"
+msgid "Choose the position of the page images on the content pages"
 msgstr "Choisir la position des images de page sur les pages de contenu"
 
 msgid "Page image position"
