--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2023-11-17 11:54+0100\n"
+"POT-Creation-Date: 2023-12-05 08:58+0100\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1274,9 +1274,6 @@ msgstr "URL che punta al logo"
 msgid "Logo (Square)"
 msgstr "Logo (quadrato)"
 
-msgid "Standard Image"
-msgstr "Immagine standard"
-
 msgid "E-Mail Reply Address (Reply-To)"
 msgstr "Indirizzo di risposta dell'e-mail (Rispondi a)"
 
@@ -1303,6 +1300,14 @@ msgstr "Italiano"
 
 msgid "Additional CSS"
 msgstr "CSS aggiuntivo"
+
+msgid "Will be used if an image is needed, but none has been set"
+msgstr ""
+"Verrà utilizzato se è necessaria un'immagine, ma non è stata impostata "
+"alcuna immagine."
+
+msgid "Standard Image"
+msgstr "Immagine standard"
 
 msgid "Column width left side"
 msgstr "Larghezza colonna lato sinistro"
@@ -1792,11 +1797,11 @@ msgstr "L'impostazione \"Notifica sempre\" è attiva"
 msgid "BCC"
 msgstr "BCC"
 
-msgid "Email"
-msgstr "Email"
-
 msgid "You can send a copy of the message to one or more recipients"
 msgstr "È possibile inviare una copia del messaggio a uno o più destinatari"
+
+msgid "Email"
+msgstr "Email"
 
 msgid "User"
 msgstr "Utente"
@@ -2380,6 +2385,12 @@ msgstr "Mostra l'immagine in anteprima nella pagina madre"
 
 msgid "Show image on page"
 msgstr "Mostra l'immagine nella pagina"
+
+msgid "As first element of the content"
+msgstr "En tant que premier élément du contenu"
+
+msgid "As a full width header"
+msgstr "En tant qu'image d'en-tête pleine largeur"
 
 msgid "Documents"
 msgstr "Documenti"
