Town: Submissions are now ordered by name
TYPE: Feature
LINK: ogc-1345

--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -951,6 +951,9 @@ msgstr "Avviato"
 msgid "Submitted"
 msgstr "Inviato"
 
+msgid "submitted"
+msgstr "inviato"
+
 msgid "Withdrawn"
 msgstr "Ritirato"
 
