--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -953,6 +953,9 @@ msgstr "Initié"
 msgid "Submitted"
 msgstr "Soumis"
 
+msgid "submitted"
+msgstr "soumis"
+
 msgid "Withdrawn"
 msgstr "Retiré"
 
