--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -5573,3 +5573,9 @@ msgstr "Ein Konto wurde für Sie erstellt"
 
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
+
+msgid "Use Western ordered names"
+msgstr "Westlich geordnete Namen verwenden"
+
+msgid "For instance Franz Müller instead of Müller Franz"
+msgstr "Zum Beispiel Franz Müller anstelle von Müller Franz"
