--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -5590,3 +5590,9 @@ msgstr "Un compte a été créé pour vous"
 
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
+
+msgid "Use Western ordered names"
+msgstr "Utiliser des noms occidentaux ordonnés"
+
+msgid "For instance Franz Müller instead of Müller Franz"
+msgstr "Par exemple Franz Müller au lieu de Müller Franz"
