--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2023-12-05 08:58+0100\n"
+"POT-Creation-Date: 2024-01-11 10:41+0100\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -2359,6 +2359,12 @@ msgstr "Nascondi le informazioni di contatto nella sidebar"
 msgid "Use text instead of lead in the newsletter"
 msgstr "Utiliser le texte au lieu de l'introduction dans le newsletter"
 
+msgid "Use Western ordered names"
+msgstr "Utiliser des noms occidentaux ordonnés"
+
+msgid "For instance Franz Müller instead of Müller Franz"
+msgstr "Par exemple Franz Müller au lieu de Müller Franz"
+
 #, python-format
 msgid "List this function in the page of ${name}"
 msgstr "Afficher cette fonction sur la page de ${name}"
@@ -2637,8 +2643,8 @@ msgstr "Refuser ${title} est irréversible."
 msgid "Reject reservation"
 msgstr "Refuser la réservation"
 
-#. Used in sentence: "${event} published."
 #.
+#. Used in sentence: "${event} published."
 msgid "Event"
 msgstr "Événement"
 
@@ -3973,6 +3979,9 @@ msgstr ""
 msgid "Unsubscribe"
 msgstr "Se désabonner"
 
+msgid "submitted"
+msgstr "soumis"
+
 msgid "No dates found, please select dates in the calendar first"
 msgstr "Aucune date trouvée, sélectionnez les dates dans le calendrier d'abord"
 
@@ -4505,6 +4514,9 @@ msgstr "mTAN fourni non valide ou expiré."
 
 msgid "A link was added to the clipboard"
 msgstr "Un lien a été ajouté au presse-papiers"
+
+msgid "Administrative"
+msgstr "Administratif"
 
 #, python-format
 msgid "The entry ${name} exists twice"
@@ -5590,9 +5602,3 @@ msgstr "Un compte a été créé pour vous"
 
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
-
-msgid "Use Western ordered names"
-msgstr "Utiliser des noms occidentaux ordonnés"
-
-msgid "For instance Franz Müller instead of Müller Franz"
-msgstr "Par exemple Franz Müller au lieu de Müller Franz"
