change directory url

--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -27,11 +27,9 @@ msgid "Confirmation"
 msgstr "Conferma"
 
 msgid ""
-"I confirm that I am aware that this chat will be saved and the history will "
-"be sent to me by email."
+"Ich bestätige, dass mir bewusst ist, dass dieser Chat gespeichert und der "
+"Verlauf an mich per Mail gesendet wird."
 msgstr ""
-"Confermo di essere consapevole che questa chat sarà salvata e che la "
-"cronologia mi sarà inviata via e-mail."
 
 msgid "Chat ID"
 msgstr "Chat ID "
@@ -41,8 +39,7 @@ msgstr "Immagini"
 
 msgid "Choose the position of the page images on the content pages"
 msgstr ""
-"Scegliere la posizione delle immagini di pagina nelle pagine di "
-"contenuto"
+"Scegliere la posizione delle immagini di pagina nelle pagine di contenuto"
 
 msgid "Page image position"
 msgstr "Posizione dell'immagine della pagina"
@@ -628,6 +625,9 @@ msgstr "Proponi un elemento"
 msgid "Something missing? Propose a new entry."
 msgstr "Manca qualcosa? Proponi un nuovo elemento."
 
+msgid "Internal Notes"
+msgstr "Note interne"
+
 msgid "External link"
 msgstr "Collegamento esterno"
 
@@ -950,9 +950,6 @@ msgstr "Avviato"
 
 msgid "Submitted"
 msgstr "Inviato"
-
-msgid "submitted"
-msgstr "inviato"
 
 msgid "Withdrawn"
 msgstr "Ritirato"
@@ -1819,6 +1816,9 @@ msgstr ""
 msgid "Unsubscribe"
 msgstr "Annulla iscrizione"
 
+msgid "submitted"
+msgstr "inviato"
+
 msgid "No dates found, please select dates in the calendar first"
 msgstr "Nessuna data trovata, seleziona prima le date nel calendario"
 
@@ -2275,6 +2275,13 @@ msgid ""
 msgstr ""
 "Procedere con cautela. I biglietti e i dati in essi contenuti possono essere "
 "irrevocabilmente cancellati."
+
+#~ msgid ""
+#~ "I confirm that I am aware that this chat will be saved and the history "
+#~ "will be sent to me by email."
+#~ msgstr ""
+#~ "Confermo di essere consapevole che questa chat sarà salvata e che la "
+#~ "cronologia mi sarà inviata via e-mail."
 
 #~ msgid "Chat title"
 #~ msgstr "Titolo della chat"
