--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -36,11 +36,9 @@ msgid "Confirmation"
 msgstr "Confirmation"
 
 msgid ""
-"I confirm that I am aware that this chat will be saved and the history will "
-"be sent to me by email."
+"Ich bestätige, dass mir bewusst ist, dass dieser Chat gespeichert und der "
+"Verlauf an mich per Mail gesendet wird."
 msgstr ""
-"Je confirme que je suis conscient(e) que ce chat est enregistré et que "
-"l'historique m'est envoyé par e-mail."
 
 msgid "Chat ID"
 msgstr "Chat ID"
@@ -629,6 +627,9 @@ msgstr "Proposer une entrée"
 msgid "Something missing? Propose a new entry."
 msgstr "Il manque quelque chose? Proposez une nouvelle entrée."
 
+msgid "Internal Notes"
+msgstr "Notes internes"
+
 msgid "External link"
 msgstr "Lien externe"
 
@@ -952,9 +953,6 @@ msgstr "Initié"
 
 msgid "Submitted"
 msgstr "Soumis"
-
-msgid "submitted"
-msgstr "soumis"
 
 msgid "Withdrawn"
 msgstr "Retiré"
@@ -1826,6 +1824,9 @@ msgstr ""
 msgid "Unsubscribe"
 msgstr "Se désabonner"
 
+msgid "submitted"
+msgstr "soumis"
+
 msgid "No dates found, please select dates in the calendar first"
 msgstr "Aucune date trouvée, sélectionnez les dates dans le calendrier d'abord"
 
@@ -2281,6 +2282,13 @@ msgid ""
 msgstr ""
 "Procédez avec prudence. Les billets et les données qu'ils contiennent "
 "peuvent être irrévocablement supprimés."
+
+#~ msgid ""
+#~ "I confirm that I am aware that this chat will be saved and the history "
+#~ "will be sent to me by email."
+#~ msgstr ""
+#~ "Je confirme que je suis conscient(e) que ce chat est enregistré et que "
+#~ "l'historique m'est envoyé par e-mail."
 
 #~ msgid "Chat title"
 #~ msgstr "Title du Chat"
