--- a/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
@@ -78,7 +78,7 @@ msgid "Choice"
 msgstr "Auswahl"
 
 msgid "Multiple Choice"
-msgstr "Multiple-Choice"
+msgstr "Mehrfachauswahl"
 
 msgid "Files"
 msgstr "Dateien"
