Punctuation: replace dash (-) with En Dash (–)

--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -18,7 +18,7 @@ msgid ""
 "${mtan} - mTAN for ${organisation}.\n"
 "Or continue here: ${url}"
 msgstr ""
-"${mtan} - mTAN per ${organizzazione}\n"
+"${mtan} – mTAN per ${organizzazione}\n"
 "O continua qui: ${url}"
 
 msgid ""
